--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "stable": "^0.1.8",
     "svgo": "^2.8.0",
+    "twilio": "^3.82.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
